# certhook

./: README.md  pyproject.toml
src/certhook/: __init__.py  base.py  emby.py  freepbx.py  main.py  pihole.py  unifi.py
tests/: conftest.py  test_base.py  test_emby.py  test_freepbx.py  test_main.py  test_pihole.py  test_unifi.py
